# caseus

./: .codespellrc  .gitignore  PACKET_NAME_LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
caseus/: __init__.py  __main__.py  enums.py  secrets.py
caseus/clients/: __init__.py  client.py  debug.py  util.py
caseus/game/: __init__.py  anchor.py  room.py  translator.py  util.py
caseus/packets/: __init__.py  common.py  packet.py
caseus/packets/clientbound/: __init__.py  legacy.py  main.py  tribulle.py
caseus/packets/serverbound/: __init__.py  extension.py  legacy.py  main.py  tribulle.py
caseus/proxies/: __init__.py  debug.py  fingerprint.py  input.py  proxy.py
caseus/servers/: __init__.py  debug.py  server.py
caseus/sniffers/: __init__.py  debug.py  sniffer.py
caseus/types/: __init__.py  bot_role.py  descriptions.py  numeric.py  string.py
caseus/util/: crypto.py
tests/test_packets/: test_packet.py
