[project]
name            = "caseus"
version         = "0.1.0"
description     = "An asynchronous Transformice networking library"
# TODO: readme  = "README.md"
requires-python = ">=3.7"
license         = {file = "LICENSE"}

authors = [
    {name = "friedkeenan"},
]

classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
]

dependencies = [
    # TODO: Actually put pak on pypi...
    "pak",

    "importlib_metadata; python_version < '3.8'",
    "atpublic",
    "fixedint",
    "aioconsole",
    "aiohttp",
    "scapy",
]

[project.urls]
repository = "https://github.com/friedkeenan/caseus"

[project.optional-dependencies]
tests = [
    "pytest",
]
